    - Corrected some README inaccuracies.
    - Split Search::Sitemap::Robot into it's own distribution.
    - Corrected a quoting problem in the Search::Sitemap:Robot
      documentation, so the sample code should work now.  Reported by
      Hans van Harten.
    - Fixed a bug that added the wrong lastmod time when given an
      HTTP::Response object.

1.09
    - Replaced %F with %Y-%m-%d in strftime calls, to correct a Solaris bug
      (since Solaris strftime doesn't know about %F).  Reproted by Fredrik
      Acosta.
    - Added more information to error messages when parsing an existing
      sitemap fails.  Reported by Vinko Vrsalovic Bolte.

1.08
    - Converted installer from ExtUtils::MakeMaker to Module::Install, which
      should make it easier to install for Windows users.
    - Fixed a uri-encoding problem in WWW::Google::SiteMap::URL, reported
      by Jeff Horn.
    - Added some additional test cases and cleaned up some test cases.

1.07
    - Added changes for 1.06 to Changes file, which were accidentally left
      out of the last release.
    - Fixed the WWW-Google-SiteMap-Robot.t test to skip testing if
      WWW::Mechanize is not installed, reported by Jan Kratochvil.

1.06
    - Correction to documentation for WWW::Google::SiteMap::Robot
      ($robot->start should be $robot->run), reported by Martin Kissner.
    - Adjusted WWW::Google::SiteMap::Robot to discard anchors from URLs,
      reported by Martin Kissner.
   
1.05
    - Removed an accidental prerequisite from WWW::Google::SiteMap::URL.  You
      can give it DateTime objects to set the lastmod option, but you don't
      have to, there are other ways to set it as well.

1.04
    - Fixed a documentation error in WWW::Google::SiteMap, and a problem with
      the XML headers generated for sitemap indexes, both reported by
      Michael Smith.
    - Use 'use vars' instead of 'our' for older versions of perl.

1.03